--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,6 @@ ELSE()
   target_link_libraries(statsd-test statsd pthread)
 ENDIF()
 
-
 enable_testing()
 
 function(add_memcheck_test name binary)
@@ -69,3 +68,19 @@ install(TARGETS statsd_static statsd
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
 )
+
+# Configure pkg-config file
+set(ADDITIONAL_LIBS "")
+if (WIN32)
+    set(ADDITIONAL_LIBS "-lws2_32")
+endif()
+
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/statsd-cpp.pc.in
+    ${CMAKE_CURRENT_BINARY_DIR}/statsd-cpp.pc
+    @ONLY
+)
+
+# Install pkg-config file
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/statsd-cpp.pc
+    DESTINATION lib/pkgconfig)
